--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,10 @@ jobs:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
       TERM: dumb
+
+    dependencies:
+      pre:
+        `- echo y | android update sdk --no-ui --all --filter "package-name"
     
     steps:
       - checkout
@@ -31,6 +35,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
+      - run: 
       - run: gradle dependencies
 
       - save_cache:
