update android dependencies

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
 
     dependencies:
       pre:
-        `- echo y | android update sdk --no-ui --all --filter "package-name"
+        - echo y | android update sdk --no-ui --all --filter "package-name"
     
     steps:
       - checkout
