update build file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,10 +24,10 @@ jobs:
           name: Run Tests
           #command: ./gradlew lint test
           command: ./gradlew assembleFreeSystemRelease
-    #  - store_artifacts:
-    #      path: app/build/reports
-    #      destination: reports
-    #  - store_test_results:
-    #      path: app/build/test-results
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
+      - store_test_results:
+          path: app/build/test-results
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
 
