--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,10 +24,25 @@ jobs:
           name: Run Tests
           #command: ./gradlew lint test
           command: ./gradlew assembleFreeSystemRelease
+
+      - run:
+          name: Creating Dummy Artifacts
+          command: |
+            echo "my artifact file" > /tmp/artifact-1;
+            mkdir /tmp/artifacts;
+            echo "my artifact files in a dir" > /tmp/artifacts/artifact-2;
+
       - store_artifacts:
-          path: app/build/reports
-          destination: reports
-      - store_test_results:
-          path: app/build/test-results
+          path: /tmp/artifact-1
+          destination: artifact-file
+
+      - store_artifacts:
+          path: /tmp/artifacts
+
+  #    - store_artifacts:
+  #        path: app/build/reports
+  #        destination: reports
+  #    - store_test_results:
+  #        path: app/build/test-results
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
 
