--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,18 +26,20 @@ jobs:
           command: ./gradlew assembleFreeSystemRelease
 
       - run:
-          name: Creating Dummy Artifacts
-          command: |
-            echo "my artifact file" > /tmp/artifact-1;
-            mkdir /tmp/artifacts;
-            echo "my artifact files in a dir" > /tmp/artifacts/artifact-2;
-
+          name: Initial build
+          command: ./gradlew clean assembleRelease --no-daemon --stacktrace
       - store_artifacts:
-          path: /tmp/artifact-1
-          destination: artifact-file
+          path: app/build/outputs/apk/
+          destination: apks/
 
-      - store_artifacts:
-          path: /tmp/artifacts
+ #     - run:
+ #         name: Creating Dummy Artifacts
+ #         command: |
+ #           mkdir /tmp/artifacts;
+ #           echo "my artifact files in a dir" > /tmp/artifacts/artifact-2;
+
+ #     - store_artifacts:
+ #         path: /tmp/artifacts
 
   #    - store_artifacts:
   #        path: app/build/reports
