--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,9 +26,9 @@ jobs:
           #command: ./gradlew lint test
           command: ./gradlew assembleFreeSystemRelease
 
-      - run:
-          name: Initial build
-          command: ./gradlew clean assembleRelease --no-daemon --stacktrace
+#      - run:
+#          name: Initial build
+#          command: ./gradlew clean assembleRelease --no-daemon --stacktrace
       - store_artifacts:
           path: app/build/outputs/apk/
           destination: apks/
