--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,14 +33,13 @@ jobs:
           path: app/build/outputs/apk/
           destination: apks/
 
- #     - run:
- #         name: Creating Dummy Artifacts
- #         command: |
- #           mkdir /tmp/artifacts;
- #           echo "my artifact files in a dir" > /tmp/artifacts/artifact-2;
-
- #     - store_artifacts:
- #         path: /tmp/artifacts
+      - run:
+          name: Creating Dummy Artifacts
+          command: |
+            mkdir /tmp/artifacts;
+            ls -al > /tmp/artifacts/artifact-2;
+      - store_artifacts:
+          path: /tmp/artifacts
 
   #    - store_artifacts:
   #        path: app/build/reports
