--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,8 @@ jobs:
           name: Creating Dummy Artifacts
           command: |
             mkdir /tmp/artifacts;
-            ls -al ./build/outputs/apk/freeSystem/release > /tmp/artifacts/artifact-2;
+            cp -a Conversations-2.2.8-free-system-release-unsigned.apk /tmp/artifacts/release.apk
+            #ls -al ./build/outputs/apk/freeSystem/release > /tmp/artifacts/artifact-2;
       - store_artifacts:
           path: /tmp/artifacts
 
