--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,50 +3,23 @@ jobs:
   build:
     working_directory: ~/code
     docker:
-#      - image: circleci/android:api-25-alpha
-      - image: circleci/android:api-27-node8-alpha
+      - image: circleci/android:api-25-alpha
+#      - image: circleci/android:api-27-node8-alpha
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
       - checkout
-#      - restore_cache:
-#          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
          name: Chmod permissions #if permission for Gradlew Dependencies fail, use this. 
          command: sudo chmod +x ./gradlew
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
-#      - save_cache:
-#          paths:
-#            - ~/.gradle
-#          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
-          name: Run Tests
-          #command: ./gradlew lint test
+          name: Run Build
           command: ./gradlew assembleFreeSystemRelease
-          #command: ./gradlew assemble
 
-#      - run:
-#          name: Initial build
-#          command: ./gradlew clean assembleRelease --no-daemon --stacktrace
       - store_artifacts:
           path: ./build/outputs/apk/
           destination: apks/
-
-      - run:
-          name: Creating Dummy Artifacts
-          command: |
-            mkdir /tmp/artifacts;
-            #cp -a Conversations-2.2.8-free-system-release-unsigned.apk /tmp/artifacts/release.apk
-            ls -al ./build/outputs/apk/freeSystem/release > /tmp/artifacts/artifact-2;
-      - store_artifacts:
-          path: /tmp/artifacts
-
-  #    - store_artifacts:
-  #        path: app/build/reports
-  #        destination: reports
-  #    - store_test_results:
-  #        path: app/build/test-results
-      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
 
